# gen/servergrpc/moving/reviews.pb.go
@@ -1,0 +1,207 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.1
+// 	protoc        v5.27.0
+// source: params/reviews.proto
+
+package servergrpc
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Review struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Text          string                 `protobuf:"bytes,1,opt,name=Text,proto3" json:"Text,omitempty"`
+	Name          string                 `protobuf:"bytes,2,opt,name=Name,proto3" json:"Name,omitempty"`
+	Rate          int32                  `protobuf:"varint,3,opt,name=Rate,proto3" json:"Rate,omitempty"`
+	PhotoURL      string                 `protobuf:"bytes,4,opt,name=PhotoURL,proto3" json:"PhotoURL,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Review) Reset() {
+	*x = Review{}
+	mi := &file_params_reviews_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Review) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Review) ProtoMessage() {}
+
+func (x *Review) ProtoReflect() protoreflect.Message {
+	mi := &file_params_reviews_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Review.ProtoReflect.Descriptor instead.
+func (*Review) Descriptor() ([]byte, []int) {
+	return file_params_reviews_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Review) GetText() string {
+	if x != nil {
+		return x.Text
+	}
+	return ""
+}
+
+func (x *Review) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Review) GetRate() int32 {
+	if x != nil {
+		return x.Rate
+	}
+	return 0
+}
+
+func (x *Review) GetPhotoURL() string {
+	if x != nil {
+		return x.PhotoURL
+	}
+	return ""
+}
+
+type ReviewsResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Reviews       []*Review              `protobuf:"bytes,1,rep,name=Reviews,proto3" json:"Reviews,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *ReviewsResponse) Reset() {
+	*x = ReviewsResponse{}
+	mi := &file_params_reviews_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ReviewsResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ReviewsResponse) ProtoMessage() {}
+
+func (x *ReviewsResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_params_reviews_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ReviewsResponse.ProtoReflect.Descriptor instead.
+func (*ReviewsResponse) Descriptor() ([]byte, []int) {
+	return file_params_reviews_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *ReviewsResponse) GetReviews() []*Review {
+	if x != nil {
+		return x.Reviews
+	}
+	return nil
+}
+
+var File_params_reviews_proto protoreflect.FileDescriptor
+
+var file_params_reviews_proto_rawDesc = []byte{
+	0x0a, 0x14, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x72, 0x65, 0x76, 0x69, 0x65, 0x77, 0x73,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x1f, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61,
+	0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f,
+	0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x22, 0x60, 0x0a, 0x06, 0x52, 0x65, 0x76, 0x69, 0x65,
+	0x77, 0x12, 0x12, 0x0a, 0x04, 0x54, 0x65, 0x78, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x04, 0x54, 0x65, 0x78, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x4e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x04, 0x4e, 0x61, 0x6d, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x52, 0x61, 0x74,
+	0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x52, 0x61, 0x74, 0x65, 0x12, 0x1a, 0x0a,
+	0x08, 0x50, 0x68, 0x6f, 0x74, 0x6f, 0x55, 0x52, 0x4c, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x08, 0x50, 0x68, 0x6f, 0x74, 0x6f, 0x55, 0x52, 0x4c, 0x22, 0x54, 0x0a, 0x0f, 0x52, 0x65, 0x76,
+	0x69, 0x65, 0x77, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x41, 0x0a, 0x07,
+	0x52, 0x65, 0x76, 0x69, 0x65, 0x77, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x27, 0x2e,
+	0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e,
+	0x52, 0x65, 0x76, 0x69, 0x65, 0x77, 0x52, 0x07, 0x52, 0x65, 0x76, 0x69, 0x65, 0x77, 0x73, 0x42,
+	0x24, 0x5a, 0x22, 0x2e, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67,
+	0x72, 0x70, 0x63, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x65,
+	0x72, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_params_reviews_proto_rawDescOnce sync.Once
+	file_params_reviews_proto_rawDescData = file_params_reviews_proto_rawDesc
+)
+
+func file_params_reviews_proto_rawDescGZIP() []byte {
+	file_params_reviews_proto_rawDescOnce.Do(func() {
+		file_params_reviews_proto_rawDescData = protoimpl.X.CompressGZIP(file_params_reviews_proto_rawDescData)
+	})
+	return file_params_reviews_proto_rawDescData
+}
+
+var file_params_reviews_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_params_reviews_proto_goTypes = []any{
+	(*Review)(nil),          // 0: ingvarmattis.services.moving.v1.Review
+	(*ReviewsResponse)(nil), // 1: ingvarmattis.services.moving.v1.ReviewsResponse
+}
+var file_params_reviews_proto_depIdxs = []int32{
+	0, // 0: ingvarmattis.services.moving.v1.ReviewsResponse.Reviews:type_name -> ingvarmattis.services.moving.v1.Review
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_params_reviews_proto_init() }
+func file_params_reviews_proto_init() {
+	if File_params_reviews_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_params_reviews_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_params_reviews_proto_goTypes,
+		DependencyIndexes: file_params_reviews_proto_depIdxs,
+		MessageInfos:      file_params_reviews_proto_msgTypes,
+	}.Build()
+	File_params_reviews_proto = out.File
+	file_params_reviews_proto_rawDesc = nil
+	file_params_reviews_proto_goTypes = nil
+	file_params_reviews_proto_depIdxs = nil
+}
